--- a/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-edit.html
+++ b/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-edit.html
@@ -85,7 +85,7 @@
 		<th class="col-md-3" colspan="2">상수도(ton)</th>
 		<td><input type="text" class="form-control" id="waterSum" name="waterSum" ng-model="reportEntity.waterSum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="waterToday" name="waterToday" ng-model="reportEntity.waterToday" required="required" step="0.1">
+			<input type="text" class="form-control" id="waterToday" name="waterToday" ng-model="reportEntity.waterToday" required="required" step="0.1">
 			<ul ng-show="editForm.waterToday.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.waterToday.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -97,7 +97,7 @@
 		<th>보일러(1)</th>
 		<td><input type="text" class="form-control" id="boiler1Sum" name="boiler1Sum" ng-model="reportEntity.boiler1Sum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="boiler1Today" name="boiler1Today" ng-model="reportEntity.boiler1Today" required="required" step="0.1">
+			<input type="text" class="form-control" id="boiler1Today" name="boiler1Today" ng-model="reportEntity.boiler1Today" required="required">
 			<ul ng-show="editForm.boiler1Today.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.boiler1Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -108,7 +108,7 @@
 		<th>보일러(2)</th>
 		<td><input type="text" class="form-control" id="boiler2Sum" name="boiler2Sum" ng-model="reportEntity.boiler2Sum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="boiler2Today" name="boiler2Today" ng-model="reportEntity.boiler2Today" required="required" step="0.1">
+			<input type="text" class="form-control" id="boiler2Today" name="boiler2Today" ng-model="reportEntity.boiler2Today" required="required">
 			<ul ng-show="editForm.boiler2Today.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.boiler2Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -119,7 +119,7 @@
 		<th colspan="2">폐수배출량(m3)</th>
 		<td><input type="text" class="form-control" id="wastesSum" name="wastesSum" ng-model="reportEntity.wastesSum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="wastesToday" name="wastesToday" ng-model="reportEntity.wastesToday" required="required" step="0.1">
+			<input type="text" class="form-control" id="wastesToday" name="wastesToday" ng-model="reportEntity.wastesToday" required="required">
 			<ul ng-show="editForm.wastesToday.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.wastesToday.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -131,7 +131,7 @@
 		<th>열량계(1)</th>
 		<td><input type="text" class="form-control" id="heat1Sum" name="heat1Sum" ng-model="reportEntity.heat1Sum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="heat1Today" name="heat1Today" ng-model="reportEntity.heat1Today" required="required" step="0.1">
+			<input type="text" class="form-control" id="heat1Today" name="heat1Today" ng-model="reportEntity.heat1Today" required="required">
 			<ul ng-show="editForm.heat1Today.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.heat1Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -142,7 +142,7 @@
 		<th>열량계(2)</th>
 		<td><input type="text" class="form-control" id="heat2Sum" name="heat2Sum" ng-model="reportEntity.heat2Sum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="heat2Today" name="heat2Today" ng-model="reportEntity.heat2Today" required="required" step="0.1">
+			<input type="text" class="form-control" id="heat2Today" name="heat2Today" ng-model="reportEntity.heat2Today" required="required">
 			<ul ng-show="editForm.heat2Today.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.heat2Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -153,7 +153,7 @@
 		<th colspan="2">경유(l)</th>
 		<td><input type="text" class="form-control" id="oilSum" name="oilSum" ng-model="reportEntity.oilSum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="oilToday" name="oilToday" ng-model="reportEntity.oilToday" required="required" step="0.1">
+			<input type="text" class="form-control" id="oilToday" name="oilToday" ng-model="reportEntity.oilToday" required="required">
 			<ul ng-show="editForm.oilToday.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.oilToday.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -164,7 +164,7 @@
 		<th colspan="2">냉동기운전시간(흡수식) </th>
 		<td><input type="text" class="form-control" id="freeze1Sum" name="freeze1Sum" ng-model="reportEntity.freeze1Sum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="freeze1Today" name="freeze1Today" ng-model="reportEntity.freeze1Today" required="required" step="0.1">
+			<input type="text" class="form-control" id="freeze1Today" name="freeze1Today" ng-model="reportEntity.freeze1Today" required="required">
 			<ul ng-show="editForm.freeze1Today.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.freeze1Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -175,7 +175,7 @@
 		<th colspan="2">냉동기운전시간(스크류)</th>
 		<td><input type="text" class="form-control" id="freeze2Sum" name="freeze2Sum" ng-model="reportEntity.freeze2Sum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="freeze2Today" name="freeze2Today" ng-model="reportEntity.freeze2Today" required="required" step="0.1">
+			<input type="text" class="form-control" id="freeze2Today" name="freeze2Today" ng-model="reportEntity.freeze2Today" required="required">
 			<ul ng-show="editForm.freeze2Today.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.freeze2Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -187,7 +187,7 @@
 		<th colspan="2">전력량(kWh)</th>
 		<td><input type="text" class="form-control" id="wattSum" name="wattSum" ng-model="reportEntity.wattSum" readonly="true"></td>
 		<td>
-			<input type="number" class="form-control" id="wattToday" name="wattToday" ng-model="reportEntity.wattToday" required="required" step="0.1">
+			<input type="text" class="form-control" id="wattToday" name="wattToday" ng-model="reportEntity.wattToday" required="required">
 			<ul ng-show="editForm.wattToday.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.wattToday.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -198,7 +198,7 @@
 		<th colspan="2">피크치(kWh)</th>
 		<td>-</td>
 		<td>
-			<input type="number" class="form-control" id="powerToday" name="powerToday" ng-model="reportEntity.powerToday" required="required" step="0.1">
+			<input type="text" class="form-control" id="powerToday" name="powerToday" ng-model="reportEntity.powerToday" required="required">
 			<ul ng-show="editForm.powerToday.$error.required" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항 입니다.</li></ul>
 			<ul ng-show="editForm.powerToday.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
@@ -554,7 +554,7 @@
 		<th>종량제 </th>
 		<td><input type="text" class="form-control" id="item1Sum" name="item1Sum" ng-model="reportEntity.item1Sum" readonly="readonly"></td>
 		<td>
-			<input type="number" class="form-control" id="item1Today" name="item1Today" ng-model="reportEntity.item1Today">
+			<input type="text" class="form-control" id="item1Today" name="item1Today" ng-model="reportEntity.item1Today">
 			<ul ng-show="editForm.item1Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
 		<td><input type="text" class="form-control" id="item1Total" name="item1Total" ng-model="reportEntity.item1Total" readonly="readonly"></td>
@@ -564,7 +564,7 @@
 		<th>마대 </th>
 		<td><input type="text" class="form-control" id="item2Sum" name="item2Sum" ng-model="reportEntity.item2Sum" readonly="readonly"></td>
 		<td>
-			<input type="number" class="form-control" id="item2Today" name="item2Today" ng-model="reportEntity.item2Today">
+			<input type="text" class="form-control" id="item2Today" name="item2Today" ng-model="reportEntity.item2Today">
 			<ul ng-show="editForm.item2Today.$error.number" class="parsley-errors-list filled"><li class="parsley-required">숫자만 입력하세요.</li></ul>
 		</td>
 		<td><input type="text" class="form-control" id="item2Total" name="item2Total" ng-model="reportEntity.item2Total" readonly="readonly"></td>
